fixed overlaps

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ h1 {
 	width: 250px;
 	border-radius: 50%;
 	display: inline-block;
-	line-height: 0;
+	line-height: 1;
 	position: relative; z-index: 4; /* to maintain position in front of #circle elements*/
 	margin-left: 30px;
 	background-color: #eaa795;
@@ -172,4 +172,8 @@ h5 {
 
 footer h5 {
   text-align: left;
+}
+
+a:link {
+  text-decoration: none;
 }
